--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=http://fuelfreemotos.wordpress.com/vectrix-2/" />
+<meta http-equiv="refresh" content="0; url=http://fuelfreemotos.wordpress.com/vectrix-2/?test" />
 </head>
 <body>
 </body>
