--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="Site dedicado à Vectrix Premium e mobilidade urbana" content="Vectrix Premium">
+<meta name="Vectrix Premium Vectrix Spy Fimrware Premium" content="HTML,CSS,XML,JavaScript">
+<meta name="Vectrix" content="Vectrix Premium">
 <meta http-equiv="refresh" content="0; url=http://fuelfreemotos.wordpress.com/vectrix-2/" />
 </head>
 <body>
