--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="Site dedicado à Vectrix Premium e mobilidade urbana" content="Vectrix Premium">
-<meta name="Vectrix Premium Vectrix Spy Fimrware Premium" content="HTML,CSS,XML,JavaScript">
-<meta name="Vectrix" content="Vectrix Premium">
+<meta name="description" content="Site dedicado à Vectrix Premium. Mobilidade urbana e eléctrica a baixo custo">
+<meta name="keywords" content="Vectrix Premium, Vectrix Spy, Firmware Premium, FuelFree Motos, Fuel Free Motos, Vectrix">
+<meta name="author" content="Vectrix">
 <meta http-equiv="refresh" content="0; url=http://fuelfreemotos.wordpress.com/vectrix-2/" />
 </head>
 <body>
