--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="description" content="Site dedicado à Vectrix Premium. Mobilidade urbana e eléctrica a baixo custo">
 <meta name="keywords" content="Vectrix Premium, Vectrix Spy, Firmware Premium, FuelFree Motos, Fuel Free Motos, Vectrix">
 <meta name="author" content="Vectrix">
-<meta http-equiv="refresh" content="0; url=http://fuelfreemotos.wordpress.com/vectrix-2/" />
+<meta http-equiv="refresh" content="0; url=http://vectrixpremium.wordpress.com/" />
 </head>
 <body>
 </body>
